# Telegram-Summarize-Bot

./: .gitignore  pyproject.toml  requirements.txt
chromedriver/: download-chromedriver.md
src/: app.py
src/config/: common.py
src/core/: config.py  schema.py  scraper.py  summarize.py
src/helpers/: llm_gateway_util.py  utils.py
