[project]
name = "telegram-summarize-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=24.10.0",
    "logzero>=1.7.0",
    "lxml>=5.3.0",
    "openai>=1.58.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "python-telegram-bot[job-queue]>=21.9",
    "selenium>=4.27.1",
    "tenacity>=9.0.0",
    "webdriver-manager>=4.0.2",
]

[tool.uv]
package = true